Tarea 3 en python hasta el punto 2

--- a/MandelbrotFractal-Copy0.ipynb
+++ b/MandelbrotFractal-Copy0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2b94c75b7c4328f2456723bb0cfd1ed92fed979a1a80fd6052f1c79013b3743f"
+  "signature": "sha256:d3a7f184b63496e7ce3c1e3e4b49e0770c09072c3863eba0e0ab4c761d57c8fb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%pylab\n",
+      "%pylab inline\n",
       "from __future__ import division"
      ],
      "language": "python",
@@ -22,12 +22,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Using matplotlib backend: TkAgg\n",
         "Populating the interactive namespace from numpy and matplotlib\n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -35,32 +34,16 @@
      "input": [
       "#numero de iteraciones\n",
       "k = 100\n",
-      "#tama\u00f1o de la matriz\n",
+      "#resolucion\n",
       "tam = 1024\n",
-      "#crea la matriz\n",
-      "x = y = 0\n",
+      "#matriz que guarda el conjunto de mandelbrot, y la velocidad de convergencia del resto de puntos\n",
       "a = np.zeros((tam, tam))\n",
+      "x = y = 0\n",
+      "#intervalo del eje real distribuido uniformemente en del intervalo (-2, 1)  de acuardo a la resolucion\n",
       "Re = np.array([[ (-2 + 3*x/tam) for x in range(tam)] for y in range(tam)])\n",
+      "#intervalo del eje imaginario distribuido uniformemente en el intervalo (-1, 1) de acuerdo a la resolucion\n",
       "x = y = 0\n",
       "Im = np.array([[ (-1 + 2*y/tam) for x in range(tam)] for y in range(tam)])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "x = 1\n",
-      "c = Re + 1j*Im\n",
-      "zn = Re + 1j*Im\n",
-      "for x in range(k):\n",
-      "    \n",
-      "    conv = ( abs(zn) <= 2 )\n",
-      "    zn[conv] = zn[conv]**2 + c[conv]\n",
-      "    a[conv] += 1"
      ],
      "language": "python",
      "metadata": {},
@@ -71,25 +54,51 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "b = 1-a\n",
-      "fig = plt.figure()\n",
-      "ax = plt.axes()\n",
-      "ax.set_title(\"Mandelbrot Fractal\")\n",
-      "imshow(a, cmap=cm.Blues,\n",
-      "           extent=(-2, 1, -1, 1))\n",
+      "x = 1\n",
+      "#matriz del plano complejo\n",
+      "c = Re + 1j*Im\n",
+      "#matriz de la sucesi\u00f3n de mandelbrot, empieza en z1 = c, n = 1\n",
+      "zn = Re + 1j*Im\n",
+      "#iteraci\u00f3n que calcula los siguientes terminos de la sucesion para los c que no divergen\n",
+      "for x in range(k):\n",
+      "    #indices de los c que no divergen\n",
+      "    conv = where( abs(zn) <= 2 )\n",
+      "    #siguiente termino de la sucesion\n",
+      "    zn[conv] = zn[conv]**2 + c[conv]\n",
+      "    #guarda la velocidad de divergencia, o si converge\n",
+      "    a[conv] += 1\n",
+      "\n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#grafica\n",
       "plt.show()\n",
       "fig1 = plt.figure()\n",
       "ax1 = plt.axes()\n",
       "ax1.set_title(\"Mandelbrot Fractal\")\n",
-      "imshow( 1-a, cmap=cm.Spectral,\n",
-      "           extent=(-2, 1, -1, 1))\n",
+      "imshow( a , cmap=cm.gist_stern)\n",
+      "plt.show()\n",
+      "\n",
+      "plt.show()\n",
+      "fig1 = plt.figure()\n",
+      "ax1 = plt.axes()\n",
+      "ax1.set_title(\"Mandelbrot Fractal\")\n",
+      "imshow(1- a , cmap=cm.gist_)\n",
       "plt.show()\n",
       "\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
